# network-manager-sstp

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  NetworkManager-sstp.spec  README  TODO  autogen.sh  configure.ac  network-manager-sstp.doap  network-manager-sstp.spec  nm-sstp-service.conf  nm-sstp-service.name  nm-sstp-service.name.in  nm-sstp.desktop.in
appdata/: network-manager-sstp.appdata.xml.in  network-manager-sstp.metainfo.xml.in
auth-dialog/: Makefile.am  main.c
debian/: changelog  control  copyright  network-manager-sstp-gnome.install  network-manager-sstp.install  network-manager-sstp.postinstal  network-manager-sstp.preinst  rules
debian/patches/: series
doc/: example-sstp-system-wide-connection.sh
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  as.po  be@latin.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  (+26 more)
properties/: Makefile.am  advanced-dialog.c  advanced-dialog.h  gresource.xml  import-export.c  libnm-vpn-plugin-sstp-editor.ver  nm-pptp-dialog.ui  nm-sstp-dialog.ui  nm-sstp-editor-plugin.c  nm-sstp-editor-plugin.h  nm-sstp-editor.c  nm-sstp-editor.h  nm-sstp.c  nm-sstp.h
properties/.deps/: libnm_sstp_properties_la-advanced-dialog.Plo  libnm_sstp_properties_la-import-export.Plo  libnm_sstp_properties_la-nm-sstp.Plo
properties/.libs/: libnm-sstp-properties.la  libnm-sstp-properties.lai
shared/: nm-default.h  nm-service-defines.h  utils.c  utils.h
shared/nm-utils/: nm-glib.h  nm-shared-utils.h
src/: Makefile.am  nm-ppp-status.h  nm-sstp-pppd-compat.h  nm-sstp-pppd-mppe.c  nm-sstp-pppd-mppe.h  nm-sstp-pppd-plugin.c  nm-sstp-pppd-service.xml  nm-sstp-pppd-status.h  nm-sstp-service-defines.h  nm-sstp-service.c  nm-sstp-service.h
